@@ -1,3 +1,8 @@
+Thu Jun  6 09:36:09 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* src/check_mandirs.c (purge_missing) [NDBM]: Check for the
+	  existence of DATABASE.dir rather than DATABASE.
+
 Thu Jun  6 09:32:24 BST 2013  Colin Watson  <cjwatson@debian.org>
 
 	* src/catman.c (add_arg): MYDBM_DSIZE may return size_t; cast (for
